# nep_shop

./: README.md  pyproject.toml
src/: manage.py
src/auth_profile/: admin.py  backends.py  docs.py  forms.py  models.py  serializers.py  urls.py  user_manager.py  views.py
src/auth_profile/migrations/: 0001_initial.py  0002_buyer.py
src/common/: mixins.py  models.py
src/nep_shop/: asgi.py  mixins.py  settings1.py  urls.py  utils.py  wsgi.py
src/nep_shop/settings/: __init__.py  base.py  development.py  production.py  testing.py
src/order_management/: models.py  serializers.py
src/product/: admin.py  docs.py  filters.py  models.py  serializers.py  urls.py  views.py
src/product/migrations/: 0001_initial.py  0002_alter_product_stock.py  0003_remove_category_product_category_slug_and_more.py  0004_rating_product_alter_product_seller_and_more.py
